[project]
name = "streamlit-ddm"
version = "0.1.0"
description = "Interactive Drift Diffusion Model visualization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.31.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
]
